# SecureServe-CDN

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: release.yml
src/: auth.rs  cleanup.rs  config.rs  db.rs  main.rs  models.rs  storage.rs  templates.rs
src/routes/: files.rs  mod.rs  tokens.rs  upload.rs
